cmake_minimum_required(VERSION 2.5)
project(MyTest)
set(top_dir ${PROJECT_SOURCE_DIR})
set(bin_dir ${top_dir}/bin)
set(lib_dir ${top_dir}/lib)
set(EXECUTABLE_OUTPUT_PATH ${bin_dir})
set(LIBRARY_OUTPUT_PATH ${lib_dir})
link_directories(${lib_dir})
message(">>>>>>>>>>>>>>>>>>\n${lib_dir}\n<<<<<<<<<<<<<<<<<<\n")
add_subdirectory(src)
add_subdirectory(lib)
